--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <head profile="http://w3.org/2005/10/profile">
         <title><%= @title || 'Page' %> &mdash; Octavia</title>
         <link rel="stylesheet" type="text/css" href="/styles/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="/styles/bootstrap-responsive.min.css" />
@@ -9,6 +9,7 @@
         <script type="application/javascript" src="/js/bootstrap.min.js"></script>
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico" />
     </head>
     <body>
         <div class="container">
