Environment and layout changes.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,5 +15,8 @@
         <div class="container">
             <%= yield %>
         </div>
+        <div style="float: right;">
+            <a href="/new"><img src="/img/octavia_vinyl.png" style="float: right; width: 60%; height: 60%;" /></a>
+        </div>
     </body>
 </html>
