--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,10 @@
 <div class="row">
     <div class="span8">
+        <% if flash[:info] %>
+            <div class="alert alert-info">
+                <p><%= flash[:info] %></p>
+            </div>
+        <% end %>
         <h2>Tracks</h2>
     </div>
 </div>
