Scavenge records on start

--- a/views/track.erb
+++ b/views/track.erb
@@ -30,6 +30,7 @@
             </audio>
         <% else %>
             <p>Sorry, but this track has expired.</p>
+            <p><a href="<%= @track.buylink %>">Click here</a> to find it in the iTunes or Amazon store.</p>
         <% end %>
     </div>
 </div>
