--- a/views/upload_form.erb
+++ b/views/upload_form.erb
@@ -1,15 +1,16 @@
 <div class="row">
-    <div class="span6">
-        <h2>Upload a file</h2>
-    </div>
+  <div class="span6">
+    <h2>Upload a file</h2>
+  </div>
 </div>&nbsp;
+
 <div class="row">
-    <div class="span6">
-        <form action="/new" method="post" enctype="multipart/form-data">
-        	<fieldset>
-        		<input type="file" name="file" />
-        		<input type="submit" value="Upload file" class="btn btn-primary" style="float: right;" />
-        	</fieldset>
-        </form>
-    </div>
+  <div class="span6">
+    <form action="/new" method="post" enctype="multipart/form-data">
+      <fieldset>
+        <input type="file" name="file" />
+        <input type="submit" value="Upload file" class="btn btn-primary pull-right" />
+      </fieldset>
+    </form>
+  </div>
 </div>
