update permalink field

--- a/views/track.erb
+++ b/views/track.erb
@@ -50,7 +50,13 @@
             </fieldset>
             </form>
         </p>
-        <p><label>Permalink</label><input class="span2 uneditable-input" type="text" value="<%= "http://#{request.host}/#{@track.id}" %>" /></p>
+        <p>
+          <label>Permalink</label>
+          <input class="span2 uneditable-input" 
+            type="text" 
+            value="http://<%="#{request.host}/#{@track.id}/#{@track.title.gsub(/[^0-9A-Za-z\._-]/, '-')}-#{@track.artist.gsub(/[^0-9A-Za-z\._-]/, '-')}" %>" 
+          />
+        </p>
         <p>Played <%= @track.plays %> time<%= 's' unless @track.plays == 1 %></p>
     </div>
 </div>
